# events-validator-sg

./: .gitignore  Dockerfile  FREE_CLOUD_DEPLOYMENT.md  PRESENTATION_SLIDES.md  PROJECT_DOCUMENTATION.md  README.md  supabase_schema.sql
streamlit_ev/: .env.example  pyproject.toml
streamlit_ev/app/helpers/: supabase_client.py
validator_src/: .env.example  index.js  package.json  render.yaml  server.js  vercel-config.json
validator_src/api/: health.js  validate.js
validator_src/helpers/: supabaseHelpers.js  validationHelpers.js
